fixing urls on github pages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,9 @@ layout: page
 
 ---
 
-
+{% if jekyll.environment == "localhost" %}
+  <h1>Localhost</h1>
+{% endif %}
 
 
 {% for category in site.categories %}
