fiddling with docs folder

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,6 +86,17 @@ blockquote {
 hr {
 	margin: 40px 0px;
 	}
+	
+	
+span.wip {
+	background-color: rgba(0, 255, 0, 0.3);
+	border: rgba(0, 90, 0, 0.3) 1px solid;
+	border-top: rgba(255, 255, 255, 0.3) 1px solid;
+	border-left: rgba(255, 255, 255, 0.3) 1px solid;
+	padding: 0px 4px;
+	border-radius: 2px;
+	
+}	
 
 </style>
 
