styling changes mostly

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -99,6 +99,31 @@ span.wip {
 	
 }	
 
+footer {
+  /* 
+background: #ff0;
+  color: #660;
+ */
+  }
+  
+.footer-col-wrapper {  
+   /*  color: #990; */
+    }
+  
+header.site-header {
+  border-top: 0px none;
+  padding-bottom: 20px;
+/*   text-transform: uppercase; */
+ /*  background: #ff0; */
+  }
+  
+header.site-header div.wrapper h1 a {
+  color: #999;
+  font-weight: 600; 
+  }
+  
+  
+
 </style>
 
   
