--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -4,7 +4,7 @@ layout: page
 
 {% for collection in site.collections %}
 	{% if collection.label != "posts" %}
-  	{% if collection.label != "colophon˙" %}
+  	{% if collection.label != "colophon" %}
       {% assign name = collection.label %}
       {% assign pretty_name = collection.prettylabel %}
       <h2>{{ pretty_name }}</h2>
