add week 1 content. add author support to templates

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -11,11 +11,13 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
-            {%- if site.author -%}
+            <!-- 
+{%- if site.author -%}
               {{ site.author | escape }}
             {%- else -%}
               {{ site.title | escape }}
             {%- endif -%}
+ -->
             </li>
            <!-- 
  {%- if site.email -%}
@@ -26,7 +28,7 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+       <!--  {%- include social.html -%} -->
       </div>
 
       <div class="footer-col footer-col-3">
