--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -2,19 +2,33 @@
 layout: page
 ---
 
-{% for collection in site.collections %}
-	{% if collection.label != "posts" %}
-  	{% if collection.label != "colophon" %}
-      {% assign name = collection.label %}
-      {% assign pretty_name = collection.prettylabel %}
-      <h2>{{ pretty_name }}</h2>
 
-      {% for item in site[name] %}
 
-        <h3><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
-        <p>{{ item.excerpt }}</p>
-
-      {% endfor %}
-			{% endif %}
-	{% endif %}
+<h2>Course Notes</h2>
+{% assign sortedCourseNotes = site.course-notes | sort: 'title' %}
+  {% for item in sortedCourseNotes %}
+<h3><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
+<p>{{ item.excerpt }}</p>
 {% endfor %}
+
+
+
+<h2>Guides</h2>
+{% assign sortedGuides = site.guides | sort: 'title' %}
+  {% for item in sortedGuides %}
+<h3><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
+<p>{{ item.excerpt }}</p>
+{% endfor %}
+
+<hr/>
+
+
+<h2>Special projects</h2>
+<h3>DIY Arduino</h3>
+{% assign sortedDIYArduino = site.diy-arduino | sort: 'date' %}
+  {% for item in sortedDIYArduino %}
+<h3><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
+<p>{{ item.excerpt }}</p>
+{% endfor %}
+
+<hr/>
