--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -4,20 +4,10 @@ layout: page
 
 
 <h2>LM225 Course Notes (2020)</h2>
-{% assign sortedCourseNotes_lm225_2020 = site.course-notes-lm225-2020 | sort: 'title' %}
-{% for item in sortedCourseNotes_lm225_2020 %}
-<h3><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
-<p>{{ item.excerpt }}</p>
-{% endfor %}
 
 
+<h3><a href="{{ site.baseurl }}{{ item.url }}"></a>Schedule</a></h3>
 
-<h2>Course Notes 2019</h2>
-{% assign sortedCourseNotes = site.course-notes | sort: 'title' %}
-{% for item in sortedCourseNotes %}
-<h3><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
-<p>{{ item.excerpt }}</p>
-{% endfor %}
 
 
 
@@ -28,15 +18,18 @@ layout: page
 <p>{{ item.excerpt }}</p>
 {% endfor %}
 
+
 <hr />
 
+<h2>Archive content></h2>
 
-<h2>Special projects</h2>
-<h3>DIY Arduino</h3>
-{% assign sortedDIYArduino = site.diy-arduino | sort: 'date' %}
-{% for item in sortedDIYArduino %}
+
+<h2>Course Notes 2019</h2>
+{% assign sortedCourseNotes = site.course-notes | sort: 'title' %}
+{% for item in sortedCourseNotes %}
 <h3><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
 <p>{{ item.excerpt }}</p>
 {% endfor %}
+
 
 <hr />
