--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -6,9 +6,11 @@ layout: page
 <h2>LM225 Course Notes (2020)</h2>
 
 
-<h3><a href="{{ site.baseurl }}{{ item.url }}"></a>Schedule</a></h3>
+<h3><a href="course-notes-lm225-2020/">Schedule and course content</a></h3>
 
 
+
+<hr />
 
 
 <h2>Guides</h2>
@@ -21,7 +23,7 @@ layout: page
 
 <hr />
 
-<h2>Archive content></h2>
+<h2>Archive content</h2>
 
 
 <h2>Course Notes 2019</h2>
