--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -9,6 +9,17 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
+        <p>
+          {% for path in page_paths %}
+          {% assign my_page = site.pages | where: "path", path | first %}
+          {% if my_page.title %}
+          {% if my_page.title != "Tags" %}
+          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></br />
+          {% endif %}
+          {% endif %}
+          {% endfor %}
+        </p>
+
         <ul class="contact-list">
           <li class="p-name">
             <!-- 
@@ -18,17 +29,17 @@
               {{ site.title | escape }}
             {%- endif -%}
  -->
-            </li>
-           <!-- 
+          </li>
+          <!-- 
  {%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
  -->
-            {%- endif -%}
+          {%- endif -%}
         </ul>
       </div>
 
       <div class="footer-col footer-col-2">
-       <!--  {%- include social.html -%} -->
+        <!--  {%- include social.html -%} -->
       </div>
 
       <div class="footer-col footer-col-3">
