--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -5,7 +5,11 @@
     {% assign page_paths = site.header_pages | default: default_paths %}
     <h1><a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
 
+    <h2><a href="https://fablabbrighton.github.io/digital-fabrication-module/course-notes-lm225-2020/readme">LM225
+        Course Notes</a></h2>
+    <!--
     {% if page_paths %}
+    
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
@@ -18,7 +22,7 @@
           </span>
         </label>
 
-        <div class="trigger">
+         <div class="trigger">
         
 
         
@@ -30,8 +34,9 @@
             {% endif %}
             {% endif %}
           {% endfor %}
-        </div>
+        </div> 
       </nav>
     {% endif %}
+    -->
   </div>
 </header>
