--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <h1><a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
+    <h1><a class="site-title-x" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
 
     <h2><a href="https://fablabbrighton.github.io/digital-fabrication-module/course-notes-lm225-2020/readme">LM225
         Course Notes</a></h2>
