--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -6,9 +6,10 @@ layout: page
 <h2>LM225 Course Notes (2020)</h2>
 
 
-<h3><a href="course-notes-lm225-2020/">Schedule and course content</a></h3>
+<h3><a href="course-notes-lm225-2020/readme">Schedule and course content</a></h3>
 
-
+:pencil2:
+[`readme.md`](https://github.com/fablabbrighton/digital-fabrication-module/tree/master/docs/_course-notes-lm225-2020/readme.md)
 
 <hr />
 
