--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -8,8 +8,10 @@ layout: page
 
 <h3><a href="course-notes-lm225-2020/readme">Schedule and course content</a></h3>
 
-:pencil2:
-[`readme.md`](https://github.com/fablabbrighton/digital-fabrication-module/tree/master/docs/_course-notes-lm225-2020/readme.md)
+:pencil2: <a
+  href="https://github.com/fablabbrighton/digital-fabrication-module/tree/master/docs/_course-notes-lm225-2020/readme.md">
+  <pre>readme.md</pre></a>
+
 
 <hr />
 
