--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -10,7 +10,7 @@ layout: page
 
 :pencil2: <a
   href="https://github.com/fablabbrighton/digital-fabrication-module/tree/master/docs/_course-notes-lm225-2020/readme.md">
-  <pre>readme.md</pre></a>
+  <code>readme.md</code></a>
 
 
 <hr />
