--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -14,7 +14,7 @@
           {% assign my_page = site.pages | where: "path", path | first %}
           {% if my_page.title %}
           {% if my_page.title != "Tags" %}
-          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></br />
+          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a><br />
           {% endif %}
           {% endif %}
           {% endfor %}
